# string-template-interface

./: Cargo.toml  Language.md  README.md  bacon.toml  flake.nix
language/: Cargo.toml
language/src/: data.rs  errors.rs  lib.rs  parse.rs  reduce.rs  tests_macros.rs
src/: main.rs
sti/: Cargo.toml  test.json  test.sti
sti/src/: main.rs
tree-sitter-sti/: .envrc  .gitignore  Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py
tree-sitter-sti/bindings/c/: tree-sitter-sti.pc.in
tree-sitter-sti/bindings/go/: binding.go  binding_test.go  go.mod
tree-sitter-sti/bindings/node/: binding.cc
tree-sitter-sti/bindings/python/tree_sitter_sti/: __init__.py  binding.c
tree-sitter-sti/bindings/rust/: build.rs  lib.rs
tree-sitter-sti/bindings/swift/TreeSitterSti/: sti.h
tree-sitter-sti/src/: grammar.json  parser.c
