[package]
name = "language"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.9.3"
thiserror = "1.0.63"
serde = { version = "1.0.204", features = ["serde_derive"], optional = true }

[features]
default = ["serde"]
serde = ["dep:serde"]
